/*
 * Copyright (c) 2022 Toast, Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package protokt.v1.testing.messageconflicts;

message Boolean {}
message Double {}
message Float {}
message Int {}
message List {}
message Long {}
message Map {}
message String {}
message Unit {}
message Enum {}
message Int32 {}
message Int64 {}
message Fixed32 {}
message Fixed64 {}
message SFixed64 {}
message SInt32 {}
message SInt64 {}
message UInt32 {}
message UInt64 {}
message Bytes {}
message Deserializer {}
message KtDeserializer {}
message KtSerializer {}
message KtEnumSerializer {}
message KtMessageSerializer {}
message Tag {}
message UnknownFieldSet {}
message KtEnum {}
message AbstractKtDeserializer {}
message KtMessage {}
message AbstractKtMessage {}
message BytesSlice {}
message KtEnumDeserializer {}
message AbstractKtEnum {}
message UnknownField {}
message UnknownValue {}
message VarintVal {}
message Fixed32Val {}
message Fixed64Val {}
message LengthDelimitedVal {}
message Any {}
message Builder {}
